<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bussiness_list"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="15dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="15dp" >

    <TextView
        android:id="@+id/tv_bussiness_list_Title"
        android:layout_width="140dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="0dp"
        android:gravity="center_vertical"
        android:text="@string/time"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/iv_bussiness_list_picture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_bussiness_list_Detail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/detail"
        android:textSize="18sp" />

</LinearLayout>