<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_test_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_test_info_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/tv_test_info_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_title"
            android:textColor="@color/text_white"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_testInfo_Title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp"
                android:background="@color/text_white"
                android:gravity="start"
                android:padding="3dp"
                android:text="@string/ark_id"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_testInfo_PostTime"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp"
                android:background="@color/text_white"
                android:gravity="start"
                android:padding="3dp"
                android:text="@string/time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_testInfo_Poster"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp"
                android:background="@color/text_white"
                android:gravity="start"
                android:padding="3dp"
                android:text="@string/poster"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_testInfo_Detail"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp"
                android:background="@color/text_white"
                android:gravity="start"
                android:padding="3dp"
                android:text="@string/detail"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>