<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <include
        android:id="@+id/ll_register2_Title"
        layout="@layout/talk_title_bar" />

    <!--
    <LinearLayout 
        android:id="@+id/ll_register2_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar"
        android:gravity="center_horizontal|center_vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        >
        <TextView 
            android:id="@+id/tv_register2_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register2_title"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>
    -->

    <com.example.main.tryscroll
        android:id="@+id/sv_register2_sv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/ll_register2_Title"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/preference_first_item"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="16dp" >

                <TextView
                    android:id="@+id/tv_register2_Real_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/register2_realname"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_register2_Real_name"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/tv_register2_Real_name"
                    android:background="@drawable/edittext_select"
                    android:hint="@string/register2_realname_hint"
                    android:paddingBottom="3dp"
                    android:paddingStart="7dp"
                    android:paddingTop="3dp"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:background="@drawable/preference_item"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/tv_register2_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/register2_sex"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/rg_register2_Sex"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/tv_register2_sex"
                    android:background="@color/text_white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <RadioButton
                        android:id="@+id/rb_register2_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex_female" />

                    <RadioButton
                        android:id="@+id/rb_register2_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/sex_male" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:background="@drawable/preference_item"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/tv_register2_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/register2_code"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_register2_code"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/tv_register2_code"
                    android:background="@drawable/edittext_select"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:ems="10"
                    android:hint="@string/register2_code_hint"
                    android:paddingBottom="3dp"
                    android:paddingStart="7dp"
                    android:paddingTop="3dp"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:background="@drawable/preference_item"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/tv_register2_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/register2_addr"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_register2_address"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/tv_register2_address"
                    android:background="@drawable/edittext_select"
                    android:ems="10"
                    android:hint="@string/register2_addr_hint"
                    android:paddingBottom="3dp"
                    android:paddingStart="7dp"
                    android:paddingTop="3dp"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:background="@drawable/preference_item"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/tv_register2_e_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/register2_mail"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_register2_e_mail"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/tv_register2_e_mail"
                    android:background="@drawable/edittext_select"
                    android:hint="@string/register2_mail_hint"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="3dp"
                    android:paddingStart="7dp"
                    android:paddingTop="3dp"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:background="@drawable/preference_item"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/tv_register2_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/register2_phone"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_register2_telephone"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/tv_register2_telephone"
                    android:background="@drawable/edittext_select"
                    android:ems="10"
                    android:hint="@string/register2_phone_hint"
                    android:inputType="phone|number"
                    android:paddingBottom="3dp"
                    android:paddingStart="7dp"
                    android:paddingTop="3dp"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:background="@drawable/preference_last_item"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/tv_register2_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/register2_mobile"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_register_Check2_mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/tv_register2_mobile"
                    android:background="@drawable/edittext_select"
                    android:ems="10"
                    android:hint="@string/register2_mail_hint"
                    android:inputType="number"
                    android:paddingBottom="3dp"
                    android:paddingStart="7dp"
                    android:paddingTop="3dp"
                    android:singleLine="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_register2_register"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/register2_set_background"
                    android:gravity="center"
                    android:text="@string/register2_set"
                    android:textColor="@color/register2_set_text"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </com.example.main.tryscroll>

</RelativeLayout>